simple get req test

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/Cmmh1101/developer-AI-p1#readme",
   "dependencies": {
-    "@langchain/ollama": "^0.2.4",
+    "@langchain/ollama": "^0.2.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "langchain": "^0.3.35"
+    "langchain": "^0.3.30"
   }
 }
